# homalos-webctp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  config.sample.yaml  config_md.yaml  config_td.yaml  main.py  pyproject.toml  start_md_server.bat  start_td_server.bat
apps/: td_app.py
clients/: md_client.py  td_client.py
config/: alerts.yaml  config.sample.yaml  config_md.yaml  config_td.yaml
ctp/: __init__.py
docs/: development.md  development_CN.md  logger_guide.md  logger_guide_CN.md  md_protocol.md  md_protocol_CN.md  migration_guide_CN.md  monitoring_guide_CN.md  performance_baseline_report.md  performance_report_CN.md  performance_tuning_guide_CN.md  redis_setup_CN.md  sync_api_faq_CN.md  sync_api_quick_start_CN.md  sync_api_reference_CN.md  td_protocol.md  td_protocol_CN.md  troubleshooting_CN.md
examples/: README.md  config_example.py  example_dual_ma_strategy.py  example_multi_strategy.py  example_position_monitor.py  example_quote_monitor.py  example_simple_demo.py
scripts/: demo_alerts.py  simplify_sync_api.py  test_redis.py
services/: connection.py  md_client.py  td_client.py
src/: __init__.py  run.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache_manager.py  test_event_loop_thread.py  test_md_client_query_snapshot.py  test_metrics.py  test_metrics_alerts.py  test_results_summary.md  test_serialization.py  test_services_td_client.py  test_strategy_integration.py  test_strategy_manager.py  test_sync_api_async_callback_thread_safe.py  test_sync_api_config.py  test_sync_api_data_classes.py  test_sync_api_get_quote.py  (+15 more)
(+65 files in other folders)
