[project]
name = "homalos-webctp"
version = "0.1.0"
description = "homalos-webctp is a CTP service that provides a WebSocket interface based on the CTP API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.0",
    "fastapi>=0.123.3",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
