[project]
name = "homalos-webctp"
version = "0.2.0"
description = "homalos-webctp is a CTP service that provides a WebSocket interface based on the CTP API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.0",
    "fakeredis>=2.32.1",
    "fastapi>=0.123.3",
    "hypothesis>=6.0.0",
    "loguru>=0.7.3",
    "msgpack>=1.0.0",
    "orjson>=3.9.0",
    "psutil>=5.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
